[package]
name = "gtk4-femtovg-canvas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gtk4-femtovg-canvas"
path = "main.rs"

[dependencies]
epoxy = "0.1"
femtovg = { version = "0.3.5", default-features = false }
glow = "0.11.2"
gtk = { version = "0.4.8", package = "gtk4" }
libloading = "0.7.3"
